test_regress/t/t_struct_notfound_bad.out
%Error: t/t_struct_notfound_bad.v:12: Member 'nfmember' not found in structure
%Error: Exiting due to
